src/objects/C501_Collaborative_Outcome__c.object
<CustomObject>
    <description>Houses the list of Outcomes as defined by each Collaborative. Used with a junction object with Goals.</description>
    <fields>
        <fullName>C501_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Is this Outcome actively being used.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>C501_Collaborative__c</fullName>
        <label>Collaborative</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Collaborative Outcomes</relationshipLabel>
        <relationshipName>Collaborative_Outcomes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>C501_Domain__c</fullName>
        <inlineHelpText>Domain the Outcome belongs to.</inlineHelpText>
        <label>Domain</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Domains</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>C501_Name_Term__c</fullName>
        <formula>C501_Outcome_Name__c +&quot; (&quot;+ TEXT(C501_Term__c)+&quot;)&quot;</formula>
        <label>Name &amp; Term</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C501_Outcome_Name__c</fullName>
        <inlineHelpText>Name of the Outcome as it appears to end users.</inlineHelpText>
        <label>Outcome Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C501_Term__c</fullName>
        <label>Term</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Short-Term</fullName>
                </value>
                <value>
                    <fullName>Medium-Term</fullName>
                </value>
                <value>
                    <fullName>Long-Term</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Collaborative Outcome</label>
    <nameField>
        <displayFormat>CO-{0000}</displayFormat>
        <label>Collaborative Outcome ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Collaborative_Outcomes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>